@@ -61,6 +61,7 @@ Included
 - Container tarball detection now recognizes Docker-style markers (`manifest.json` + `repositories`) and OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) for local tar inputs.
 - Explicit OCI layout route now fails closed when manifests exist but blob evidence is missing (`CONTAINER_LAYOUT_INVALID`), preventing partial container identity acceptance.
 - Explicit container route now fails closed when OCI index manifests shape is invalid and when container tar metadata is partial, preventing mixed valid/corrupt container acceptance.
+- Explicit compose route now fails closed when service placeholders exist without `image` or `build` evidence, while still allowing build-only compose service definitions.
 - Explicit SBOM route now fails closed when package/component evidence is empty, preventing empty SBOM shells from passing strict container SBOM analysis.
 - SBOM JSON parsing now emits bounded package/component counts when present.
 - Signature/cert adapter extraction deepened:
